--- a/Splatoon/[7.x]黄金のレガシー/極/[7.4]極グラシャラボラス.md
+++ b/Splatoon/[7.x]黄金のレガシー/極/[7.4]極グラシャラボラス.md
@@ -1,6 +1,7 @@
 ﻿## 変更履歴
 <span style="color: #FF0000;">2025/12/18 15:10<br></span>
-取り急ぎオーバーブーストテキスト表示のみ公開<br>
+オーバーブーストテキスト表示のみ公開<br>
+後ほど本腰を入れて作ります<br>
 
 ## レイアウト
 ```
