--- a/Splatoon/[7.x]黄金のレガシー/極/[7.4]極グラシャラボラス.md
+++ b/Splatoon/[7.x]黄金のレガシー/極/[7.4]極グラシャラボラス.md
@@ -3,9 +3,22 @@
 オーバーブーストテキスト表示のみ公開<br>
 後ほど本腰を入れて作ります<br>
 
+<span style="color: #FF0000;">2025/12/18 21:40<br></span>
+表示系を一通り制作<br>
+
 ## レイアウト
 ```
-~Lv2~{"Name":"GE_グラシャラボラス_オーバーブースト_散会","Group":"極グラシャラボラス","ZoneLockH":[1308],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Match":"(14284>45663)"},{"Type":3,"Match":"(14284>45670)","MatchDelay":12.0},{"Type":3,"Match":"(14284>45677)","MatchDelay":12.0}],"ElementsL":[{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayTextIntl":{"Jp":"散会"},"refActorNPCNameID":14284,"refActorComparisonType":6,"onlyTargetable":true}]}
-~Lv2~{"Name":"GE_グラシャラボラス_オーバーブースト_ペア","Group":"極グラシャラボラス","ZoneLockH":[1308],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Match":"(14284>45664)"},{"Type":3,"Match":"(14284>45670)","MatchDelay":12.0},{"Type":3,"Match":"(14284>45677)","MatchDelay":12.0}],"ElementsL":[{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayTextIntl":{"Jp":"ペア"},"refActorNPCNameID":14284,"refActorComparisonType":6,"onlyTargetable":true}]}
-~Lv2~{"Enabled":false,"Name":"GE_グラシャラボラス_フラッシュサンダー","Group":"極グラシャラボラス","ZoneLockH":[628],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45666],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true}]}
+~Lv2~{"Name":"GE_グラシャラボラス_オーバーブースト_散会_テキスト","Group":"極グラシャラボラス","ZoneLockH":[1308],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Match":"(14284>45663)"},{"Type":3,"Match":"(14284>45670)","MatchDelay":12.0},{"Type":3,"Match":"(14284>45677)","MatchDelay":12.0}],"ElementsL":[{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayTextIntl":{"Jp":"散会"},"refActorNPCNameID":14284,"refActorComparisonType":6,"onlyTargetable":true}]}
+~Lv2~{"Name":"GE_グラシャラボラス_オーバーブースト_散会_AOE","Group":"極グラシャラボラス","ZoneLockH":[1308],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Match":"(14284>45663)"},{"Type":3,"Match":"(14284>45670)","MatchDelay":12.0},{"Type":3,"Match":"(14284>45677)","MatchDelay":12.0}],"ElementsL":[{"Name":"トリガー","type":1,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45670,45677],"refActorUseCastTime":true,"refActorCastTimeMin":6.0,"refActorCastTimeMax":12.0,"refActorUseOvercast":true,"refActorComparisonType":6,"Conditional":true,"Nodraw":true},{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"ObjectKinds":[1]}]}
+~Lv2~{"Name":"GE_グラシャラボラス_オーバーブースト_ペア_テキスト","Group":"極グラシャラボラス","ZoneLockH":[1308],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Match":"(14284>45664)"},{"Type":3,"Match":"(14284>45670)","MatchDelay":12.0},{"Type":3,"Match":"(14284>45677)","MatchDelay":12.0}],"ElementsL":[{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayTextIntl":{"Jp":"ペア"},"refActorNPCNameID":14284,"refActorComparisonType":6,"onlyTargetable":true}]}
+~Lv2~{"Name":"GE_グラシャラボラス_オーバーブースト_ペア_AOE","Group":"極グラシャラボラス","ZoneLockH":[1308],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Match":"(14284>45664)"},{"Type":3,"Match":"(14284>45670)","MatchDelay":12.0},{"Type":3,"Match":"(14284>45677)","MatchDelay":12.0}],"ElementsL":[{"Name":"トリガー","type":1,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45670,45677],"refActorUseCastTime":true,"refActorCastTimeMin":6.0,"refActorCastTimeMax":12.0,"refActorUseOvercast":true,"refActorComparisonType":6,"Conditional":true,"Nodraw":true},{"Name":"D1","type":1,"radius":4.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorPlaceholder":["<d1>"],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true},{"Name":"D2","type":1,"radius":4.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorPlaceholder":["<d2>"],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true},{"Name":"D3","type":1,"radius":4.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorPlaceholder":["<d3>"],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true},{"Name":"D4","type":1,"radius":4.0,"color":4278190335,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorPlaceholder":["<d4>"],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true}]}
+~Lv2~{"Name":"GE_グラシャラボラス_ブーステッド・エクスプレス","Group":"極グラシャラボラス","ZoneLockH":[1308],"ElementsL":[{"Name":"トリガー","type":1,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45670],"refActorComparisonType":6,"Conditional":true,"Nodraw":true},{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayTextIntl":{"Jp":"ノックバック"},"refActorType":1},{"Name":"テザー","type":3,"offY":2.0,"radius":0.0,"color":4281204480,"fillIntensity":0.5,"thicc":6.5,"refActorType":1,"tether":true,"LineEndB":1}]}
+~Lv2~{"Name":"GE_グラシャラボラス_ブーステッド・バキューム","Group":"極グラシャラボラス","ZoneLockH":[1308],"ElementsL":[{"Name":"トリガー","type":1,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45696],"refActorComparisonType":6,"Conditional":true,"Nodraw":true},{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayTextIntl":{"Jp":"引き寄せ"},"refActorType":1},{"Name":"テザー","type":3,"offY":-2.0,"radius":0.0,"color":4281204480,"fillIntensity":0.5,"thicc":6.5,"refActorType":1,"tether":true,"LineEndB":1}]}
+~Lv2~{"Name":"GE_グラシャラボラス_エーテルブラスター","Group":"極グラシャラボラス","ZoneLockH":[1308],"ElementsL":[{"Name":"トリガー","type":1,"refActorComparisonType":7,"refActorVFXPath":"vfx/lockon/eff/m0969_mrt_sht_c0k2.avfx","refActorVFXMax":7000,"Conditional":true,"Nodraw":true},{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":3.0,"thicc":0.0,"overlayTextIntl":{"Jp":"頭割り"},"refActorType":1}]}
+~Lv2~{"Name":"GE_グラシャラボラス_エーテルバレット","Group":"極グラシャラボラス","ZoneLockH":[1308],"ElementsL":[{"Name":"トリガー","type":1,"refActorComparisonType":7,"refActorVFXPath":"vfx/lockon/eff/m0969_mrt_sht_c1k2.avfx","refActorVFXMax":7000,"Conditional":true,"Nodraw":true},{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":3.0,"thicc":0.0,"overlayTextIntl":{"Jp":"散会"},"refActorType":1}]}
+~Lv2~{"Name":"GE_グラシャラボラス_フラッシュサンダー","Group":"極グラシャラボラス","ZoneLockH":[1308],"Freezing":true,"FreezeFor":3.0,"ElementsL":[{"Name":"トリガー","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45666],"refActorUseCastTime":true,"refActorCastTimeMax":1.0,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"Conditional":true,"Nodraw":true},{"Name":"サークル","type":1,"radius":4.0,"color":4278190335,"fillIntensity":0.3,"refActorComparisonType":1,"includeRotation":true,"FaceMe":true,"ObjectKinds":[1]}]}
+~Lv2~{"Name":"GE_グラシャラボラス_ヘッドライト/サンダーブレス","Group":"極グラシャラボラス","ZoneLockH":[1308],"ElementsL":[{"Name":"トリガー","type":3,"refY":25.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14286,"refActorRequireCast":true,"refActorCastId":[45681,45683],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"ヘッドライト_3両目_1段目1","type":3,"refX":-7.5,"refY":30.0,"refZ":5.0,"offX":-7.5,"offY":20.0,"offZ":5.0,"radius":2.5,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45690],"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":235.0,"DistanceSourceZ":9.536743E-07,"DistanceMax":15.0,"FillStep":2.0},{"Name":"ヘッドライト_3両目_1段目2","type":3,"refX":7.5,"refY":40.0,"refZ":5.0,"offX":7.5,"offY":25.0,"offZ":5.0,"radius":2.5,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45690],"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":235.0,"DistanceMax":15.0,"FillStep":2.0},{"Name":"ヘッドライト_3両目_2段目","type":3,"refY":40.0,"radius":10.0,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45690],"refActorUseCastTime":true,"refActorCastTimeMin":6.0,"refActorCastTimeMax":9.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"onlyTargetable":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":235.0,"DistanceSourceZ":9.536743E-07,"DistanceMax":15.0,"FillStep":2.0},{"Name":"ヘッドライト_5両目_1段目","type":3,"refX":7.5,"refY":40.0,"refZ":5.0,"offX":7.5,"offY":20.0,"offZ":5.0,"radius":2.5,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45690],"refActorUseCastTime":true,"refActorCastTimeMax":6.0,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":335.0,"DistanceSourceZ":9.536743E-07,"DistanceMax":15.0,"FillStep":2.0},{"Name":"ヘッドライト_5両目_2段目","type":3,"refY":40.0,"radius":10.0,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45690],"refActorUseCastTime":true,"refActorCastTimeMin":6.0,"refActorCastTimeMax":9.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":335.0,"DistanceMax":15.0,"FillStep":2.0},{"Name":"サンダーブレス_3両目_1段目","type":3,"refY":40.0,"radius":10.0,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45687],"refActorUseCastTime":true,"refActorCastTimeMax":6.0,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":235.0,"DistanceSourceZ":9.536743E-07,"DistanceMax":15.0,"FillStep":2.0},{"Name":"サンダーブレス_3両目_2段目1","type":3,"refX":-7.5,"refY":30.0,"refZ":5.0,"offX":-7.5,"offY":20.0,"offZ":5.0,"radius":2.5,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45687],"refActorUseCastTime":true,"refActorCastTimeMin":6.0,"refActorCastTimeMax":9.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":235.0,"DistanceSourceZ":9.536743E-07,"DistanceMax":15.0,"FillStep":2.0},{"Name":"サンダーブレス_3両目_2段目2","type":3,"refX":7.5,"refY":40.0,"refZ":5.0,"offX":7.5,"offY":25.0,"offZ":5.0,"radius":2.5,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45687],"refActorUseCastTime":true,"refActorCastTimeMin":6.0,"refActorCastTimeMax":9.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":235.0,"DistanceSourceZ":9.536743E-07,"DistanceMax":15.0,"FillStep":2.0},{"Name":"サンダーブレス_5両目_1段目","type":3,"refY":40.0,"radius":10.0,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45687],"refActorUseCastTime":true,"refActorCastTimeMax":6.0,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":335.0,"DistanceMax":15.0,"FillStep":2.0},{"Name":"サンダーブレス_5両目_2段目","type":3,"refX":7.5,"refY":40.0,"refZ":5.0,"offX":7.5,"offY":20.0,"offZ":5.0,"radius":2.5,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14284,"refActorRequireCast":true,"refActorCastId":[45687],"refActorUseCastTime":true,"refActorCastTimeMin":6.0,"refActorCastTimeMax":9.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":335.0,"DistanceSourceZ":9.536743E-07,"DistanceMax":15.0,"FillStep":2.0}]}
+~Lv2~{"Name":"GE_グラシャラボラスの分体_エーテルレイ","Group":"極グラシャラボラス","ZoneLockH":[1308],"ElementsL":[{"Name":"トリガー","type":1,"refActorComparisonType":7,"refActorVFXPath":"vfx/lockon/eff/tank_laser_7sec_lockon01p.avfx","refActorVFXMin":4000,"refActorVFXMax":7000,"Conditional":true,"Nodraw":true},{"Name":"T1","type":4,"radius":50.0,"coneAngleMin":-18,"coneAngleMax":18,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14406,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"FaceMe":true,"DistanceMax":13.2,"faceplayer":"<t1>","FillStep":4.0},{"Name":"T2","type":4,"radius":50.0,"coneAngleMin":-18,"coneAngleMax":18,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14406,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"FaceMe":true,"DistanceMax":13.2,"faceplayer":"<t2>","FillStep":4.0}]}
+~Lv2~{"Name":"GE_エスコートタレット_エレクトロレイ","Group":"極グラシャラボラス","ZoneLockH":[1308],"ElementsL":[{"Name":"前方直線1","type":3,"refY":25.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14286,"refActorRequireCast":true,"refActorCastId":[45681],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"前方直線2","type":3,"refY":20.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14286,"refActorRequireCast":true,"refActorCastId":[45683],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"前方直線3","type":3,"refY":10.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14286,"refActorRequireCast":true,"refActorCastId":[45682],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
+~Lv2~{"Name":"GE_雷光輪_プラズマレイ","Group":"極グラシャラボラス","ZoneLockH":[1308],"ElementsL":[{"Name":"トリガー","type":3,"refY":25.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14286,"refActorRequireCast":true,"refActorCastId":[45681],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"車両1-1","type":3,"refY":30.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14285,"refActorObjectLife":true,"refActorLifetimeMin":0.0,"refActorLifetimeMax":7.0,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":107.5,"DistanceSourceY":85.0,"DistanceSourceZ":-9.536743E-07,"DistanceMax":0.5,"FillStep":2.0},{"Name":"車両1-2","type":3,"refY":30.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14285,"refActorObjectLife":true,"refActorLifetimeMin":0.0,"refActorLifetimeMax":7.0,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":102.5,"DistanceSourceY":85.0,"DistanceSourceZ":-9.536743E-07,"DistanceMax":0.5,"FillStep":2.0},{"Name":"車両1-3","type":3,"refY":30.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14285,"refActorObjectLife":true,"refActorLifetimeMin":0.0,"refActorLifetimeMax":7.0,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":97.5,"DistanceSourceY":85.0,"DistanceSourceZ":-9.536743E-07,"DistanceMax":0.5,"FillStep":2.0},{"Name":"車両1-4","type":3,"refY":30.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14285,"refActorObjectLife":true,"refActorLifetimeMin":0.0,"refActorLifetimeMax":7.0,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":92.5,"DistanceSourceY":85.0,"DistanceSourceZ":-9.536743E-07,"DistanceMax":0.5,"FillStep":2.0},{"Name":"車両2-1","type":3,"refY":30.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14285,"refActorObjectLife":true,"refActorLifetimeMin":0.0,"refActorLifetimeMax":7.0,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":107.5,"DistanceSourceY":135.0,"DistanceMax":0.5,"FillStep":2.0},{"Name":"車両2-2","type":3,"refY":30.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14285,"refActorObjectLife":true,"refActorLifetimeMin":0.0,"refActorLifetimeMax":7.0,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":102.5,"DistanceSourceY":135.0,"DistanceMax":0.5,"FillStep":2.0},{"Name":"車両2-3","type":3,"refY":30.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14285,"refActorObjectLife":true,"refActorLifetimeMin":0.0,"refActorLifetimeMax":7.0,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":97.5,"DistanceSourceY":135.0,"DistanceMax":0.5,"FillStep":2.0},{"Name":"車両2-4","type":3,"refY":30.0,"radius":2.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14285,"refActorObjectLife":true,"refActorLifetimeMin":0.0,"refActorLifetimeMax":7.0,"refActorComparisonType":6,"includeRotation":true,"LimitDistance":true,"DistanceSourceX":92.5,"DistanceSourceY":135.0,"DistanceMax":0.5,"FillStep":2.0}]}
 ```
