--- a/Splatoon/[7.x]黄金のレガシー/極/[7.4]極グラシャラボラス.md
+++ b/Splatoon/[7.x]黄金のレガシー/極/[7.4]極グラシャラボラス.md
@@ -4,7 +4,8 @@
 後ほど本腰を入れて作ります<br>
 
 <span style="color: #FF0000;">2025/12/18 21:40<br></span>
-表示系を一通り制作<br>
+とりあえず一通り完成<br>
+散会位置表示は欲しいモノがあれば作ります<br>
 
 ## レイアウト
 ```
