Update [7.4]アルカディアヘビー級1層ノーマル .md

--- a/Splatoon/[7.x]黄金のレガシー/ノーマル/[7.4]アルカディアヘビー級1層ノーマル .md
+++ b/Splatoon/[7.x]黄金のレガシー/ノーマル/[7.4]アルカディアヘビー級1層ノーマル .md
@@ -3,14 +3,18 @@
 <span style="color: #FF0000;">2025/12/20/23:50<br></span>
 公開<br>
 
+<span style="color: #FF0000;">2025/12/21/8:30<br></span>
+レイアウト名称の命名規則が間違っていたため修正<br>
+動作自体の修正は無いので、気にならない方は入れ直し不要です
+
 ## レイアウト
 ```
-~Lv2~{"Name":"HvyN_ヴァンプ・ファタール_ハーフムーン","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"ElementsL":[{"Name":"通常_右1","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45910],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"通常_右2","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45911],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"通常_左1","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45906],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"通常_左2","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45907],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"強化_右1","type":4,"refY":46.58,"offX":-4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45912],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"強化_右2","type":4,"refY":46.58,"offX":4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45913],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"強化_左1","type":4,"refY":46.58,"offX":4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45908],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"強化_左2","type":4,"refY":46.58,"offX":-4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45909],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0}]}
-~Lv2~{"Name":"HvyN_ヴァンプ・ファタール_ヴァンプストンプ1","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":5.0,"Match":"(14300>45899)","MatchDelay":5.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":8.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":100.0,"DistanceMax":7.0}]}
-~Lv2~{"Name":"HvyN_ヴァンプ・ファタール_ヴァンプストンプ2","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":3.5,"Match":"(14300>45899)","MatchDelay":10.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":8.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":100.0,"DistanceMin":7.0,"DistanceMax":17.0}]}
-~Lv2~{"Name":"HvyN_ヴァンプ・ファタール_ヴァンプストンプ3","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":3.5,"Match":"(14300>45899)","MatchDelay":13.5}],"ElementsL":[{"Name":"サークル","type":1,"radius":8.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":100.0,"DistanceMin":17.0,"DistanceMax":27.0}]}
-~Lv2~{"Name":"HvyN_ヴァンプ・ファタール_エーテルレッティング","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"ElementsL":[{"Name":"前方直線1","type":3,"refY":50.0,"offY":-50.0,"radius":3.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45897],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"前方直線2","type":3,"refY":50.0,"offY":-50.0,"radius":3.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45897],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0}]}
-~Lv2~{"Name":"HvyN_ヴァンプ・ファタール_サディスティック・スクリーチ","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"ElementsL":[{"Name":"チャクラム・ファタール_矢印1","type":3,"refY":2.0,"offY":-2.0,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_矢印2","type":3,"refY":2.0,"offX":-2.0,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_矢印3","type":3,"refY":2.0,"offX":2.0,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_サークル","type":1,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_前方直線","type":3,"refY":10.0,"radius":0.0,"color":4278236159,"fillIntensity":0.3,"thicc":0.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"FillStep":2.0},{"Name":"トーチャー・ファタール_前方直線","type":3,"refY":10.0,"radius":1.0,"color":4278236159,"fillIntensity":0.3,"thicc":0.0,"refActorNPCNameID":14499,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"FillStep":2.0}]}
-~Lv2~{"Name":"HvyN_トーチャー・ファタール_突き出る","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"ElementsL":[{"Name":"前方直線1","type":3,"refY":50.0,"radius":2.51,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14301,"refActorRequireCast":true,"refActorCastId":[45878,45879,45880],"refActorUseCastTime":true,"refActorCastTimeMin":2.0,"refActorCastTimeMax":5.0,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0,"Conditional":true,"ConditionalInvert":true},{"Name":"前方直線2","type":3,"refY":50.0,"radius":2.51,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14301,"refActorRequireCast":true,"refActorCastId":[45878,45879,45880],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy1N_ヴァンプ・ファタール_ハーフムーン","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"ElementsL":[{"Name":"通常_右1","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45910],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"通常_右2","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45911],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"通常_左1","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45906],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"通常_左2","type":4,"refY":46.58,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45907],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"強化_右1","type":4,"refY":46.58,"offX":-4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45912],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0},{"Name":"強化_右2","type":4,"refY":46.58,"offX":4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45913],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"強化_左1","type":4,"refY":46.58,"offX":4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45908],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":4.712389,"FillStep":2.0},{"Name":"強化_左2","type":4,"refY":46.58,"offX":-4.0,"radius":60.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45909],"refActorUseCastTime":true,"refActorCastTimeMin":5.0,"refActorCastTimeMax":8.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy1N_ヴァンプ・ファタール_ヴァンプストンプ1","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":5.0,"Match":"(14300>45899)","MatchDelay":5.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":8.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":100.0,"DistanceMax":7.0}]}
+~Lv2~{"Name":"Hvy1N_ヴァンプ・ファタール_ヴァンプストンプ2","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":3.5,"Match":"(14300>45899)","MatchDelay":10.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":8.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":100.0,"DistanceMin":7.0,"DistanceMax":17.0}]}
+~Lv2~{"Name":"Hvy1N_ヴァンプ・ファタール_ヴァンプストンプ3","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":3.5,"Match":"(14300>45899)","MatchDelay":13.5}],"ElementsL":[{"Name":"サークル","type":1,"radius":8.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14501,"refActorComparisonType":6,"includeRotation":true,"FaceMe":true,"LimitDistance":true,"DistanceSourceX":100.0,"DistanceSourceY":100.0,"DistanceMin":17.0,"DistanceMax":27.0}]}
+~Lv2~{"Name":"Hvy1N_ヴァンプ・ファタール_エーテルレッティング","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"ElementsL":[{"Name":"前方直線1","type":3,"refY":50.0,"offY":-50.0,"radius":3.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45897],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"前方直線2","type":3,"refY":50.0,"offY":-50.0,"radius":3.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14300,"refActorRequireCast":true,"refActorCastId":[45897],"refActorComparisonType":6,"includeRotation":true,"AdditionalRotation":1.5707964,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy1N_ヴァンプ・ファタール_サディスティック・スクリーチ","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"ElementsL":[{"Name":"チャクラム・ファタール_矢印1","type":3,"refY":2.0,"offY":-2.0,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_矢印2","type":3,"refY":2.0,"offX":-2.0,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_矢印3","type":3,"refY":2.0,"offX":2.0,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_サークル","type":1,"radius":0.0,"color":3372154890,"fillIntensity":0.345,"thicc":5.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true},{"Name":"チャクラム・ファタール_前方直線","type":3,"refY":10.0,"radius":0.0,"color":4278236159,"fillIntensity":0.3,"thicc":0.0,"refActorNPCNameID":14500,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"FillStep":2.0},{"Name":"トーチャー・ファタール_前方直線","type":3,"refY":10.0,"radius":1.0,"color":4278236159,"fillIntensity":0.3,"thicc":0.0,"refActorNPCNameID":14499,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"FillStep":2.0}]}
+~Lv2~{"Name":"Hvy1N_トーチャー・ファタール_突き出る","Group":"[7.4]アルカディアヘビー級1層ノーマル","ZoneLockH":[1320],"ElementsL":[{"Name":"前方直線1","type":3,"refY":50.0,"radius":2.51,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14301,"refActorRequireCast":true,"refActorCastId":[45878,45879,45880],"refActorUseCastTime":true,"refActorCastTimeMin":2.0,"refActorCastTimeMax":5.0,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0,"Conditional":true,"ConditionalInvert":true},{"Name":"前方直線2","type":3,"refY":50.0,"radius":2.51,"color":4278190335,"fillIntensity":0.5,"refActorNPCNameID":14301,"refActorRequireCast":true,"refActorCastId":[45878,45879,45880],"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
 ```
 
